--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,9 @@ jobs:
           --delete \
           --cache-control "public, max-age=31536000" \
           --exclude "*.html" \
-          --exclude "*.json"
+          --exclude "*.json" \
+          --exclude "*.xml" \
+          --exclude "*.txt"
         
         # Upload HTML files with no cache
         aws s3 sync dist/ s3://parkproit.com/ \
@@ -48,6 +50,16 @@ jobs:
           --cache-control "public, max-age=0, must-revalidate" \
           --include "*.html" \
           --include "*.json"
+        
+        # Upload sitemap.xml with correct MIME type
+        aws s3 cp dist/sitemap.xml s3://parkproit.com/sitemap.xml \
+          --content-type "application/xml" \
+          --cache-control "public, max-age=3600"
+        
+        # Upload robots.txt with correct MIME type
+        aws s3 cp dist/robots.txt s3://parkproit.com/robots.txt \
+          --content-type "text/plain" \
+          --cache-control "public, max-age=3600"
           
     - name: Invalidate CloudFront
       run: |
