Fix deployment script to copy SEO files from public to dist
- Add file existence checks in deploy.sh before uploading
- Copy sitemap.xml and robots.txt from public/ to dist/ if missing
- Update GitHub Actions workflow to copy SEO files after build
- Prevents 'file does not exist' errors during deployment
- Ensures both local and automated deployments work correctly

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,11 @@ jobs:
     - name: Build project
       run: npm run build
       
+    - name: Copy SEO files to dist
+      run: |
+        cp public/sitemap.xml dist/sitemap.xml
+        cp public/robots.txt dist/robots.txt
+      
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
