Fix .gitignore to track public/ directory
- Remove 'public' from .gitignore (was incorrectly ignoring source files)
- Add public/ directory to version control
- Ensures sitemap.xml and robots.txt are tracked in git
- dist/ directory remains ignored (build output only)

--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,7 @@ jspm_packages/
 
 # Gatsby files
 .cache/
-public
+# Note: public/ directory should NOT be ignored as it contains source files like sitemap.xml
 
 # Storybook build outputs
 .out
