--- a/env.example
+++ b/env.example
@@ -9,6 +9,7 @@ VITE_CONVERTKIT_FORM_ID=your_form_id_here
 # App Configuration
 VITE_SITE_URL=https://parkproit.com
 VITE_APP_URL=https://app.parkproit.com
+VITE_API_URL=https://api.parkproit.com
 
 # Stripe (if using for payments)
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_...
