Fetch Stripe config from backend instead of env vars
- Load Stripe publishable key from backend API on mount
- Fetch from /api/stripe/config endpoint
- Remove VITE_STRIPE_PUBLISHABLE_KEY from env.example
- Single source of truth: AWS SSM via backend
- No need to configure Stripe keys in frontend env

--- a/env.example
+++ b/env.example
@@ -11,9 +11,8 @@ VITE_SITE_URL=https://parkproit.com
 VITE_APP_URL=https://app.parkproit.com
 VITE_API_URL=https://api.parkproit.com
 
-# Stripe (if using for payments)
-VITE_STRIPE_PUBLISHABLE_KEY=pk_test_...
-STRIPE_SECRET_KEY=sk_test_...
+# Note: Stripe keys are loaded from backend via /api/stripe/config
+# Backend fetches them from AWS SSM Parameter Store
 
 # Other integrations
 VITE_HOTJAR_ID=your_hotjar_id_here
