--- a/env.example
+++ b/env.example
@@ -1,19 +1,47 @@
-# Analytics
-VITE_GA4_MEASUREMENT_ID=G-XXXXXXXXXX
-VITE_PLAUSIBLE_DOMAIN=parkproit.com
+# ParkPro Home - Environment Variables
 
-# ConvertKit
-VITE_CONVERTKIT_API_KEY=your_convertkit_api_key_here
-VITE_CONVERTKIT_FORM_ID=your_form_id_here
+# ============================================================================
+# NO ENVIRONMENT VARIABLES REQUIRED! 🎉
+# ============================================================================
+#
+# This application fetches ALL configuration from the backend API,
+# which loads values from AWS Systems Manager (SSM) Parameter Store.
+#
+# Configuration is fetched from: GET /api/config
+# 
+# The backend (ParkProBackend) loads from SSM:
+#   - API_URL (from /parkpro/API_URL)
+#   - STRIPE_PUBLISHABLE_KEY (from /parkpro/STRIPE_PUBLISHABLE_KEY)
+#
+# ============================================================================
+# LOCAL DEVELOPMENT
+# ============================================================================
+#
+# The app automatically detects localhost and uses:
+#   - API URL: http://localhost:3001
+#   - Stripe Key: Fetched from backend
+#
+# Just run: npm run dev
+#
+# ============================================================================
+# PRODUCTION DEPLOYMENT
+# ============================================================================
+#
+# NO environment variables needed in your hosting platform!
+#
+# The app automatically uses:
+#   - API URL: https://api.parkproit.com
+#   - Stripe Key: Fetched from backend
+#
+# Just run: npm run build && deploy dist/
+#
+# ============================================================================
+# OPTIONAL: Analytics (silences warnings)
+# ============================================================================
 
-# App Configuration
-VITE_SITE_URL=https://parkproit.com
-VITE_APP_URL=https://app.parkproit.com
-VITE_API_URL=https://api.parkproit.com
+# Google Analytics 4 Measurement ID (optional)
+# VITE_GA4_MEASUREMENT_ID=G-XXXXXXXXXX
 
-# Note: Stripe keys are loaded from backend via /api/stripe/config
-# Backend fetches them from AWS SSM Parameter Store
-
-# Other integrations
-VITE_HOTJAR_ID=your_hotjar_id_here
-VITE_INTERCOM_APP_ID=your_intercom_app_id_here
+# ============================================================================
+# That's it! All other config comes from AWS SSM via the backend API.
+# ============================================================================
